<resources>
    <string name="app_name">StudentAttendance</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Email">Email</string>
    <string name="ForgotPassword">Forgot Password ?</string>
    <string name="Studentid">Roll Number </string>
    <string name="Studentsid">Student Roll Number </string>
    <string name="StudentName">Student Name </string>
    <string name="Class">Class</string>
    <string name="Section">Section</string>
    <string name="Address">Address</string>
    <string name="Add">Add</string>
    <string name="Intime">In time</string>
    <string name="Outtime">Out time</string>
    <string name="Save">Save</string>
    <string name="Logout">Logout</string>
    <string name="Studentinformation">Student Information</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Vehicleinformation">Vehicle Information</string>
    <string name="Businformation">Bus Information</string>
    <string name="VehicleName">Vehicle Name</string>
    <string name="VehicleNo">Vehicle Number</string>
    <string name="Date">Date</string>
    <string name="DriverName">Driver Name</string>
    <string name="Gender">Gender</string>
    <string name="Reset">Reset</string>
    <string name="Checkin">Check In</string>
    <string name="Checkout">Check Out</string>
    <string name="phoneno">Phone Number</string>
    <string name="Studentimage">Student Image</string>
    <string name="Check">Check</string>
    <string name="password">Password</string>


    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">Reset Password Activity</string>
    <string name="btn_forgot_password">Forgot Your Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>

    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_sign_in_short">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="student_entry">Student Entry</string>
    <string name="new_bus_entry">New Bus Entry</string>
    <string name="new_taxi_entry">New Taxi Entry</string>
    <string name="all_students">All student</string>
    <string name="all_bus">All Bus</string>
    <string name="all_taxi">All Taxi</string>
    <string name="student_checkin">Student Check In</string>
    <string name="student_checkout">Student Check Out</string>
    <string name="leave_early">Leave Early</string>
    <string name="report">Report</string>
    <string name="student_attendance">Student Attendance</string>
    <string name="student_class">Class</string>
    <string name="Select_class">Select Class</string>
    <string name="student_section">Section</string>
    <string name="total">Total</string>
    <string name="Student_Bus_Report">Student Bus Report</string>
    <string name="Student_Taxi_Report">Student Taxi Report</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="Select_from_date">Select From Date</string>
    <string name="Select_To_Date">Select To Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_driver_name">Enter Driver Name</string>
    <string name="enter_vehicle_name">Enter Vehicle Name</string>
    <string name="enter_vehicle_number">Enter Vehicle Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="select_gender">Select Gender</string>
    <string name="enter_student_id">Enter Student Roll Number</string>
    <string name="enter_student_name">Enter Student Name</string>

    <string name="Datee">Date</string>
    <string name="Timee">Time</string>
    <string name="enter_vehicle_type">Enter Vehicle Type</string>
    <string name="Submit">Submit</string>

    <string name="enter_class">Enter Class</string>
    <string name="enter_section">Enter Section</string>
    <string name="enter_address">Enter Address</string>
    <string name="checkout">Check Out</string>
    <string name="check">Check</string>
    <string name="name">Name</string>
    <string name="absent_student">Absent Student</string>
    <string name="present_student">Present Student</string>
    <string name="student_via_bus">Student Via Bus</string>
    <string name="student">Student</string>
    <string name="student_via_taxi">Student Via Taxi</string>
    <string name="student_leave_early">Student Leave Early</string>

    <string name="vehicle_entry">Vehicle Entry</string>
    <string name="bus_entry">Bus Entry</string>
    <string name="student_update">Student Update</string>
    <string name="vehicle_update">Vehicle Update</string>
    <string name="taxi_entry">Taxi Entry</string>
    <string name="taxi">Taxi</string>
    <string name="taxiinformation">Taxi Information</string>
    <string name="select_class">Select Class</string>
    <string name="NoString">0</string>
    <string name="uploadimage">Upload Image</string>
    <string name="exit">Exit</string>
    <string name="No_ofStudent_come_via_Bus">No of Student come via Bus</string>
    <string name="No_of_Student_come_via_Taxi">No of Student come via Taxi</string>
    <string name="No_of_student_come_via_Alone">No of Student come via Alone</string>
    <string name="No_of_student_present">No of Student Present</string>
    <string name="No_of_student_Leave_early">No of Student Leave Early</string>
    <string name="Total_No_of_student_Absent">Total No of Student Absent</string>
    <string name="Bus">Bus</string>
    <string name="Taxi">Taxi</string>
    <string name="Individual">Individual</string>
    <string name="Select_Student_Who_Come_in_Bus">Select Student Who Come in Bus</string>
    <string name="Select_Student_Who_Come_in_Taxi">Select Student Who Come in Taxi</string>
    <string name="Select_Student_Who_Come_Individual">Select Student Who Come Individual</string>
    <string name="Select_Student_Who_Going_From_Bus">Select Student Who Going From Bus</string>
    <string name="Select_Student_Who_Going_From_Taxi">Select Student Who Going From Taxi</string>
    <string name="Select_Student_Who_Going_Individual">Select Student Who Going Individual</string>
    <string name="Select_All_Student">Select All Student</string>


</resources>
