<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.VehicleinformationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="6dp"
            android:textColor="#ffffff"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight="1"
            android:text="@string/DriverName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/VehicleName" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="6dp"
            android:textColor="#ffffff"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight="1"
            android:text="@string/VehicleNo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/phoneno" />



    </LinearLayout>




    <android.support.v7.widget.RecyclerView
        android:layout_margin="5dp"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </android.support.v7.widget.RecyclerView>






</RelativeLayout>