<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.VehicleupdateActivity">




        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edittextdrivername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/DriverName"
                android:layout_gravity="start"
                android:textSize="14sp"
                />

            <EditText
                android:id="@+id/edittextvechiclename"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/VehicleName"
                android:layout_gravity="start"
                android:textSize="14sp"
                />

            <EditText
                android:id="@+id/edittextvechicleno"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/VehicleNo"
                android:layout_gravity="start"
                android:textSize="14sp"
                />


            <EditText
                android:id="@+id/edittextphoneno"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/phoneno"
                android:layout_gravity="start"
                android:textSize="14sp"
                />







            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              android:layout_marginTop="50dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/deletebutton"
                    android:layout_width="wrap_content"
                   android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:textColor="@color/white"
                    android:text="@string/Delete" />

                <Button
                    android:id="@+id/updatebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:textColor="@color/white"
                    android:text="@string/Update" />

            </LinearLayout>


        </LinearLayout>

        </android.support.v7.widget.CardView>


</LinearLayout>