<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AloneActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_marginTop="60dp"
            android:layout_width="170dp"
            android:id="@+id/imageview"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:layout_gravity="center"
            android:layout_height="170dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:layout_gravity="center">


            <TextView
                android:hint="@string/StudentName"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:textSize="20dp"/>


            <TextView
                android:id="@+id/textviewstudentname"
                android:hint="@string/name"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:layout_gravity="center">


            <TextView
                android:hint="@string/Studentsid"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:textSize="20dp"/>



        <TextView
            android:id="@+id/textviewid"
            android:hint="@string/Studentid"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:textSize="20dp"/>



</LinearLayout>




    </LinearLayout>



</LinearLayout>