<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.StudententryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp">


       <!-- <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        </android.support.v7.widget.CardView>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageview"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"

                    android:src="@mipmap/studentattendance" />

                <Button
                    android:id="@+id/uploadbutton"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:layout_marginBottom="10dp"
                    android:background="@drawable/buttonshape"
                    android:textColor="@color/white"
                    android:text="uploadimage" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:layout_margin="5dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/edittextid"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:padding="10dp"
                    android:background="@drawable/edittextshape"
                    android:hint="@string/enter_student_id"
                    android:layout_gravity="start"
                    android:inputType="number"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edittextstudename"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:padding="10dp"
                    android:background="@drawable/edittextshape"
                    android:hint="@string/enter_student_name"
                    android:inputType="text"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edittextclass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:padding="10dp"
                    android:background="@drawable/edittextshape"
                    android:hint="@string/enter_class"
                    android:inputType="text"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edittextsection"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:padding="10dp"
                    android:background="@drawable/edittextshape"
                    android:hint="@string/enter_section"
                    android:inputType="textCapCharacters"
                    android:visibility="gone"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edittextaddress"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:padding="10dp"
                    android:background="@drawable/edittextshape"
                    android:hint="@string/enter_address"
                    android:inputType="textPostalAddress"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edittextphone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/edittextshape"
                    android:hint="@string/enter_phone_number"
                    android:inputType="number"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/spinnervehicle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_margin="5dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">


                    <TextView
                        android:id="@+id/textviewselectgender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_gender"
                        android:layout_margin="10dp"
                        android:textColor="@color/black"/>

                    <RadioGroup
                        android:id="@+id/radiogroup"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/radiobuttonmale"
                            android:layout_width="wrap_content"
                            android:text="@string/male"
                            android:onClick="radiobutton1"
                            android:checked="false"
                            android:layout_height="wrap_content" />

                        <RadioButton
                            android:id="@+id/radiobuttonfemale"
                            android:layout_width="wrap_content"
                            android:text="@string/female"
                            android:checked="false"
                            android:onClick="radiobutton2"
                            android:layout_height="wrap_content" />

                    </RadioGroup>


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/Addbutton"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:layout_margin="20dp"
                        android:background="@drawable/buttonshape"
                        android:textColor="@color/white"
                        android:text="Add" />

                    <Button
                        android:id="@+id/exitbutton"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="190dp"
                        android:background="@drawable/buttonshape"
                        android:textColor="@color/white"
                        android:text="Exit" />
                </RelativeLayout>



            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>