<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.VehicleActivity">



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"

            android:layout_gravity="center">



            <EditText
                android:id="@+id/edittextdrivername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
               android:layout_marginTop="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/enter_driver_name"
                android:layout_gravity="start"
                android:padding="10dp"
                android:inputType="text"
                android:textSize="14sp" />




            <EditText
                android:id="@+id/edittextvehiclename"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="10dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/enter_vehicle_name"
                android:layout_gravity="start"
                android:inputType="text"
                android:textSize="14sp" />




            <EditText
                android:id="@+id/edittextvehicleno"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                 android:layout_marginTop="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/enter_vehicle_number"
                android:layout_gravity="start"
                android:padding="10dp"
                android:inputType="text"
                android:textSize="14sp" />




            <EditText
                android:id="@+id/edittextphone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="10dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/enter_phone_number"
                android:layout_gravity="start"
                android:inputType="phone"
                android:textSize="14sp" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/Addbutton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"

                    android:background="@drawable/buttonshape"
                    android:textColor="@color/white"
                    android:text="@string/Add"/>

                <Button
                    android:id="@+id/exitbutton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="190dp"
                    android:background="@drawable/buttonshape"
                    android:textColor="@color/white"
                    android:text="Exit" />
            </RelativeLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
</ScrollView>